cabal-version:      2.4
name:               aoc2021
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Sheyne Anderson
maintainer:         sheyne@sheyne.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable aoc2021
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Helpers
        Day1
        Day2
        Day3
        Day4
        Day5
        Day6
        Day7
        Day8
        Day9
        Day10
        Day11
        Day12
        Day13
        Day14
        Day15
        Day16
        Day17
        Day18

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        array ^>= 0.5.4.0,
        monad-loops ^>= 0.4.3,
        heap ^>= 1.0.4,
        containers ^>= 0.6.5.1
    hs-source-dirs:   app
    default-language: Haskell2010
